smee/smee-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smee
  labels:
    app: smee
spec:
  replicas: 1
  selector:
    matchLabels:
      app: smee
  template:
    metadata:
      labels:
        app: smee
    spec:
      containers:
        - name: smee
          image: ghcr.io/probot/smee.io:latest@sha256:3cf2bcec65b8cdd70ef8db87f53bee1945f0ebd620e37e303a3abcb70e007ce2
          ports:
            - containerPort: 3000
          imagePullPolicy: IfNotPresent # because digest pinning
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            runAsNonRoot: true
            runAsUser: 65532
            seccompProfile:
              type: RuntimeDefault
      tolerations:
        - key: "low-spec"
          operator: "Exists"
          effect: "NoExecute"
