smee/smee-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: smee-service
  labels:
    app.kubernetes.io/name: smee
spec:
  selector:
    app: smee
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
