smee/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: smee-ingress
  namespace: smee
  labels:
    app.kubernetes.io/name: smee

spec:
  rules:
    - host: smee.mogyuchi.jp
      http:
        paths:
          - path: "/"
            backend:
              service:
                name: smee-service
                port:
                  number: 3000
            pathType: Prefix
